# meltano-utility-trigger-dag

./: discovery.yml  pyproject.toml
utility_trigger_dag/: trigger_dag.py
