[tool.poetry]
name = "utility-trigger-dag"
version = "1.0.1"
description = "A Meltano utility to trigger dags on an Airflow instance"
authors = ["Ahren Stevens-Taylor <ahrent@packt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.scripts]
trigger-dag="utility_trigger_dag.trigger_dag:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
